--- a/css/styles.css
+++ b/css/styles.css
@@ -4,32 +4,27 @@ html {
     margin: 0;
 }
 
-#myheader {
-    color: #cbab8a;
-    border: 5px solid #d2afac;
+h1 {
+    color: #0f8828;
+    font-family: 'arial';
+    font-size: 2em
 }
 
-h1,
 h2 {
-    color: rgb(0, 0, 50);
+    color: #0f8828;
     font-family: 'arial';
-    background-color: cornsilk
+    font-size: 2em
 }
 
 body {
-    background-color: #d8d0c2;
-    padding: 15px;
-    margin: 15px;
-    border: 5px solid #d2afac;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(17,151,44,0.2)), url("../images/background3.jpg");
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
 }
-
-main {
-    background-color: #d8d0c2;
-}
-
 
 a:hover {
-    color: #ffafa0;
+    color: #0c9048;
 }
 
 @media screen and (max-width: 50rem) {
