--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,13 @@
-html {
-    color: #d8d0c2;
-    box-sizing: border-box;
-    margin: 0;
-}
-
-h1 {
-    color: #0f8828;
-    font-family: 'arial';
-    font-size: 2em
-}
-
-h2 {
+h1,
+h2,
+    {
     color: #0f8828;
     font-family: 'arial';
     font-size: 2em
 }
 
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(17,151,44,0.2)), url("../images/background3.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(17, 151, 44, 0.2)), url("../images/background3.jpg");
     background-size: cover;
     background-position: center;
     min-height: 100vh;
@@ -27,34 +17,6 @@ a:hover {
     color: #0c9048;
 }
 
-@media screen and (max-width: 50rem) {
-
-    header,
-    main,
-    footer,
-    form p {
-        flex-direction: column;
-    }
-
-    form input,
-    textarea {
-        margin: 2px 0
-    }
-
-    .hero-text {
-        flex: none;
-    }
-
-    form select {
-        margin: 0;
-    }
-}
-
-#boxelement {
-    border: 5px #088bbf;
-}
-
-#header {
-    background: #e48d98;
-    border: 5px #e48d78;
+#pics {
+    border: 5px solid #4287f5;
 }
